--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="#/">Navbar</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01"
@@ -18,8 +18,8 @@
             <div class="collapse navbar-collapse" id="navbarColor01">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#/">Home
-                            <span class="visually-hidden"></span>
+                        <a class="nav-link" href="#/">Home
+                            <span class="visually-hidden">(current)</span>
                         </a>
                     </li>
                     <li class="nav-item">
@@ -32,20 +32,11 @@
             </div>
         </div>
     </nav>
-    <div class="container py-4">
-        <div class="p-5 mb-4 bg-body-dark rounded-3">
-            <div class="container-fluid py-5">
-                <h1 class="display-3 fw-bold mt-2 mb-4">Single App Javascrip.</h1>
-                <hr class="my-4">
-                <p class="lead text-white">Single App Javascrip, es creada por GMayaS C:\>Desarrollo en Sistemas.</p>
-            </div>
-        </div>
-    </div>
+    <section id="content"></section>
     <footer>
-        <div class="footer-copyright text-center text-white bg-dark mt-3">© <%= new Date().getFullYear() %> Copyright:
+        <div class="footer-copyright text-center text-primary bg-black mt-3">© 2024 Copyright:
                 <a> GMayaS C:\>Desarrollo en Sistemas.</a>
         </div>
     </footer>
 </body>
-
 </html>
