--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#/products">Products</a>
+                        <a class="nav-link" href="#/users">Users</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#/post">Post</a>
